# WordConscious-C

./: Makefile  Makefile.am  README.md  WordConscious.conf  configure.ac  words.txt
include/: linkedlist.h  list_test.h  main.h  words.h
src/: linkedlist.c  list_test.c  main.c  tests.c  words.c
src/lib/linkedlist/: WC_linkedlist.c  WC_linkedlist.h  linkedlist.c  linkedlist.h
